<resources>
    <string name="app_name">CookHelper</string>
    <string name="action_settings">Settings</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Recipe</string>
    <string name="delete">Delete Recipe</string>
    <string name="recipeName">Recipe Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="cookingTime">Cooking Time</string>
    <string name="numServings">Servings</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="save">Save Recipe</string>
    <string name="deleteRecipe">Are you sure you want to delete?</string>
    <string name="deleteConfirm">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
